--- a/MVCScaffolding2/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/MVCScaffolding2/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -12,13 +12,21 @@
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Input.Firstname"></label>
+                <input asp-for="Input.Firstname" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Lastname"></label>
+                <input asp-for="Input.Lastname" class="form-control" />
+            </div>
+            <div class="form-group">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
             </div>
             <div class="form-group">
                 <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" disabled/>
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger" ></span>
+                <input asp-for="Input.PhoneNumber" class="form-control" disabled />
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.Straat"></label>
