--- a/MVCScaffolding2/Views/Boeks/Create.cshtml
+++ b/MVCScaffolding2/Views/Boeks/Create.cshtml
@@ -39,7 +39,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Genre" class="control-label"></label>
-                <select asp-for="@Model.Genre" class="form-control" asp-items="@Model.Genres"></select>
+                <select asp-for="Genre" class="form-control" asp-items="@Model.Genres"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
