--- a/MVCScaffolding2/Views/Boeks/Edit.cshtml
+++ b/MVCScaffolding2/Views/Boeks/Edit.cshtml
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Genre" class="control-label"></label>
-                <select asp-for="@Model.Genre" class="form-control" asp-items="@Model.Genres"></select>
+                <select asp-for="Genre" class="form-control" asp-items="@Model.Genres"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
